--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.25"
+    "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/vue-table": "^8.21.3",
+    "@vueuse/core": "^14.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.562.0",
+    "reka-ui": "^2.7.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18",
+    "vue": "^3.5.25",
+    "vue-sonner": "^2.0.9"
   },
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "@vitejs/plugin-vue": "^6.0.2",
+    "tw-animate-css": "^1.4.0",
     "vite": "^7.2.4",
     "vite-plugin-vue-devtools": "^8.0.5"
   }
