--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.25",
+    "vue-router": "^4.6.4",
     "vue-sonner": "^2.0.9"
   },
   "devDependencies": {
